# Student-Information-System-Running-on-Docker-Containers

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.db  INSTALL.md  LICENSE  MANUAL.md  README.md  docker-compose.yml  main.cpp  sample_data.sql  schema.sql
.github/workflows/: ci.yml
docs/: docker-plan.md
include/: DatabaseManager.hpp  Student.hpp
src/: DatabaseManager.cpp  Student.cpp  main.cpp
test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  README.md  UnitTests_Database  UnitTests_Student  cmake_install.cmake  integration_tests_plan.cpp  test_coverage_plan.cpp  test_database.cpp  test_student.cpp  unit_tests_plan.cpp
test/Testing/Temporary/: CTestCostData.txt
